added a web client to monitor jobs
